[mysqldump]update chart to helm3 & fix codespell (#33)
* update chart to helm3 & fix codespell

Signed-off-by: André Bauer <monotek23@gmail.com>

* update ci & fix chart versino

Signed-off-by: André Bauer <monotek23@gmail.com>

* added type

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix ci

Signed-off-by: André Bauer <monotek23@gmail.com>

* disable wordspell for now

Signed-off-by: André Bauer <monotek23@gmail.com>

* disable wordspell for now

Signed-off-by: André Bauer <monotek23@gmail.com>

* disable wordspell for now

Signed-off-by: André Bauer <monotek23@gmail.com>

* used autopep8 on python file

Signed-off-by: André Bauer <monotek23@gmail.com>

* used black lint on python file

Signed-off-by: André Bauer <monotek23@gmail.com>

* removed pylint error for env vars

Signed-off-by: André Bauer <monotek23@gmail.com>

* update kind

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix kind

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix labels & indent

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix labels & indent

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix lint

Signed-off-by: André Bauer <monotek23@gmail.com>

* added test

Signed-off-by: André Bauer <monotek23@gmail.com>

* lowered timeout to 10 min

Signed-off-by: André Bauer <monotek23@gmail.com>

* added root password

Signed-off-by: André Bauer <monotek23@gmail.com>

* added imagepullsecrets

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed docker image

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix chart lint

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix docker reg

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix secret

Signed-off-by: André Bauer <monotek23@gmail.com>

* renamed ci test

Signed-off-by: André Bauer <monotek23@gmail.com>

* use root user

Signed-off-by: André Bauer <monotek23@gmail.com>

* use non root user

--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,6 +1,8 @@
-helm-extra-args: --timeout 1200s
+helm-extra-args: --timeout 600s
 check-version-increment: true
 debug: true
+upgrade: true
 target-branch: main
 chart-repos:
+  - bitnami=https://charts.bitnami.com/bitnami
   - kokuwa=https://kokuwaio.github.io/helm-charts
