--- a/charts/mysqldump/Chart.yaml
+++ b/charts/mysqldump/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-appVersion: 2.4.1
+apiVersion: v2
+version: 4.0.0
+appVersion: 3.0.0
 description: A Helm chart to help backup MySQL databases using mysqldump
 name: mysqldump
-version: 3.0.0
 keywords:
 - mysql
 - mysqldump
@@ -10,10 +10,14 @@ keywords:
 home: https://www.mysql.com/
 icon: https://www.mysql.com/common/logos/logo-mysql-170x115.png
 sources:
-- https://github.com/kubernetes/charts
+- https://github.com/kokuwaio/helm-charts
 - https://dev.mysql.com/doc/refman/5.7/en/mysqldump.html
 maintainers:
 - name: monotek
   email: monotek23@gmail.com
-- name: axdotl
-  email: axel.koehler@kiwigrid.com
+type: application
+dependencies:
+  - name: mariadb
+    version: "9.0.1"
+    repository: "https://charts.bitnami.com/bitnami"
+    condition: mariadb.enabled
