--- a/charts/mysqldump/templates/job.yaml
+++ b/charts/mysqldump/templates/job.yaml
@@ -1,8 +1,9 @@
-{{- if eq .Values.schedule "now" -}}
+{{- if .Values.runDirectlyAfterInstall -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ template "mysqldump.fullname" . }}
+  labels:
     {{- include "mysqldump.labels" . | nindent 4 }}
 spec:
   backoffLimit: 1
