--- a/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
+++ b/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
@@ -71,8 +71,8 @@ spec:
         service: fluentd
         severity: warning
       annotations:
-        description: Fluentd retry count has been {{ $value }} for the last 10 minutes
-        summary: Fluentd retry count has been {{ $value }} for the last 10 minutes
+        description: Fluentd retry count has been  {{ "{{ $value }}" }} for the last 10 minutes
+        summary: Fluentd retry count has been  {{ "{{ $value }}" }} for the last 10 minutes
 
     - alert: FluentdOutputError
       expr: increase(fluentd_output_status_num_errors[10m]) > 0
@@ -81,7 +81,7 @@ spec:
         service: fluentd
         severity: warning
       annotations:
-        description: Fluentd output error count is {{ $value }} for the last 10 minutes
+        description: Fluentd output error count is {{ "{{ $value }}" }} for the last 10 minutes
         summary: There have been Fluentd output error(s) for the last 10 minutes
 
 {{- end }}
