--- a/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
+++ b/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
@@ -23,7 +23,7 @@ spec:
       annotations:
         summary: fluentd cannot be scraped
         description: Prometheus could not scrape {{ "{{ $labels.job }}" }} for more than 10 minutes
-  
+
     - alert: FluentdNodeDown
       expr: up{job="{{ include "fluentd-elasticsearch.fullname" . }}"} == 0
       for: 30m
@@ -33,7 +33,7 @@ spec:
       annotations:
         summary: fluentd cannot be scraped
         description: Prometheus could not scrape {{ "{{ $labels.job }}" }} for more than 30 minutes
-  
+
     - alert: FluentdQueueLength
       expr: rate(fluentd_status_buffer_queue_length[5m]) > 0.3
       for: 1m
@@ -63,5 +63,25 @@ spec:
       annotations:
         summary: fluentd records count are critical
         description: In the last 5m, records counts increased 3 times, comparing to the latest 15 min.
+
+    - alert: FluentdRetry
+      expr: increase(fluentd_status_retry_count[10m]) > 0
+      for: 20m
+      labels:
+        service: fluentd
+        severity: warning
+      annotations:
+        description: Fluentd retry count has been  {{ "{{ $value }}" }} for the last 10 minutes
+        summary: Fluentd retry count has been  {{ "{{ $value }}" }} for the last 10 minutes
+
+    - alert: FluentdOutputError
+      expr: increase(fluentd_output_status_num_errors[10m]) > 0
+      for: 1s
+      labels:
+        service: fluentd
+        severity: warning
+      annotations:
+        description: Fluentd output error count is {{ "{{ $value }}" }} for the last 10 minutes
+        summary: There have been Fluentd output error(s) for the last 10 minutes
 
 {{- end }}
