introduced variable fluentConfDir in order to configure conf location
Signed-off-by: Etienne Journet <etienne.journet@non.se.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -174,7 +174,7 @@ spec:
           mountPath: {{ .Values.hostLogDir.libSystemdDir }}
           readOnly: true
         - name: config-volume
-          mountPath: /etc/fluent/config.d
+          mountPath: {{ .Values.fluentConfDir }}
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{- end }}
