Added default value, README and signature
Signed-off-by: Etienne Journet <etienne.journet@non.se.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -38,6 +38,8 @@ awsSigningSidecar:
 # Pods to make scheduling of the pending Pod possible.
 priorityClassName: ""
 
+fluentConfDir: "/etc/fluent/config.d"
+
 # Specify where fluentd can find logs
 hostLogDir:
   varLog: /var/log
