--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -125,10 +125,16 @@ data:
           format json
           time_key time
           time_format %Y-%m-%dT%H:%M:%S.%NZ
+{{- if .Values.configMaps.useDefaults.containersKeepTimeKey }}
+          keep_time_key true
+{{- end }}          
         </pattern>
         <pattern>
           format /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
           time_format %Y-%m-%dT%H:%M:%S.%N%:z
+{{- if .Values.configMaps.useDefaults.containersKeepTimeKey }}
+          keep_time_key true
+{{- end }}          
         </pattern>
       </parse>
     </source>
