Add param to group events into chunks
Signed-off-by: baczus <baczusc60@gmail.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -126,6 +126,8 @@ elasticsearch:
   suppressTypeName: false
   buffer:
     enabled: true
+    # ref: https://docs.fluentd.org/configuration/buffer-section#chunk-keys
+    chunkKeys: ""
     type: "file"
     path: "/var/log/fluentd-buffers/kubernetes.system.buffer"
     flushMode: "interval"
