--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -541,7 +541,7 @@ data:
       suppress_type_name "#{ENV['OUTPUT_SUPPRESS_TYPE_NAME']}"
 {{- end }}
 {{- if .Values.elasticsearch.buffer.enabled }}
-      <buffer>
+      <buffer "#{ENV['OUTPUT_BUFFER_CHUNK_KEYS']}">
         @type "#{ENV['OUTPUT_BUFFER_TYPE']}"
         path "#{ENV['OUTPUT_BUFFER_PATH']}"
         flush_mode "#{ENV['OUTPUT_BUFFER_FLUSH_MODE']}"
