--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -106,6 +106,8 @@ spec:
           value: {{ .Values.elasticsearch.buffer.chunkLimitSize | quote }}
         - name: OUTPUT_BUFFER_QUEUE_LIMIT
           value: {{ .Values.elasticsearch.buffer.queueLimitLength | quote }}
+        - name: OUTPUT_BUFFER_CHUNK_KEYS
+          value: {{ .Values.elasticsearch.buffer.chunkKeys | quote }}
         - name: OUTPUT_BUFFER_TYPE
           value: {{ .Values.elasticsearch.buffer.type | quote }}
         - name: OUTPUT_BUFFER_PATH
