Add parameter to overwrite index template
Signed-off-by: baczus <baczusc60@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -531,6 +531,7 @@ data:
 {{- if or .Values.elasticsearch.template.enabled .Values.elasticsearch.ilm.enabled }}
       template_name "#{ENV['TEMPLATE_NAME']}"
       template_file "#{ENV['TEMPLATE_FILE']}"
+      template_overwrite "#{ENV['TEMPLATE_OVERWRITE']}"
 {{- end }}
       log_es_400_reason "#{ENV['OUTPUT_LOG_400_REASON']}"
       reconnect_on_error "#{ENV['OUTPUT_RECONNECT_ON_ERROR']}"
