Add parameter to group events into chunks (#44)
* Add param to group events into chunks

Signed-off-by: baczus <baczusc60@gmail.com>

* Fix typo

Signed-off-by: baczus <baczusc60@gmail.com>

* Bump fluentd-elasticsearch chart to 11.5.0

Signed-off-by: baczus <baczusc60@gmail.com>

* Refactor chunkKeys parameter

Signed-off-by: baczus <baczusc60@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -542,7 +542,11 @@ data:
       suppress_type_name "#{ENV['OUTPUT_SUPPRESS_TYPE_NAME']}"
 {{- end }}
 {{- if .Values.elasticsearch.buffer.enabled }}
+{{- if .Values.elasticsearch.buffer.chunkKeys }}
+      <buffer "#{ENV['OUTPUT_BUFFER_CHUNK_KEYS']}">
+{{- else }}
       <buffer>
+{{- end }}
         @type "#{ENV['OUTPUT_BUFFER_TYPE']}"
         path "#{ENV['OUTPUT_BUFFER_PATH']}"
         flush_mode "#{ENV['OUTPUT_BUFFER_FLUSH_MODE']}"
