Fix OUTPUT_(USER|PASSWORD) secrets usage
Previously if the user specified a secret with name `OUTPUT_USER` or
`OUTPUT_PASSWORD` in `secrets` this lead to name clashes.

Signed-off-by: Moritz Reinhardt <moreinhardt@gmail.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -60,8 +60,8 @@ resources: {}
 elasticsearch:
   auth:
     enabled: false
-    user: "yourUser"
-    password: "yourPass"
+    user: null
+    password: null
   includeTagKey: true
   setOutputHostEnvVar: true
   # If setOutputHostEnvVar is false this value is ignored
