--- a/charts/mysqldump/templates/secret-mysql.yaml
+++ b/charts/mysqldump/templates/secret-mysql.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.mysql.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,11 +7,12 @@ metadata:
     {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 data:
-{{- if and (.Values.mysql.password) (not .Values.mysql.existingSecret) }}
+{{- if .Values.mysql.password }}
   MYSQL_PWD: {{ .Values.mysql.password | b64enc | quote }}
 {{- else }}
   MYSQL_PWD: {{ randAlphaNum 40 | b64enc | quote }}
 {{- end }}
 {{- if and (.Values.upload.openstack.enabled) (not .Values.upload.openstack.existingSecret) }}
   OS_PASSWORD: {{ .Values.upload.openstack.password | b64enc | quote }}
+{{- end }}
 {{- end }}
