--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -31,6 +31,7 @@ awsSigningSidecar:
   image:
     repository: abutaha/aws-es-proxy
     tag: v1.0
+  args: []
 
 # Specify to use specific priorityClass for pods
 # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
