[fluentd-elasticsearch] Remove YAML syntax cruft
YAML is remarkably flexible and can actually deal with most of this,
but the stray `]` caused issues with extra arguments.

Signed-off-by: Chris St. Pierre <chris.a.st.pierre@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -208,13 +208,13 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         args:
           - "-endpoint"
-          - "{{ .Values.elasticsearch.scheme }}://{{ index .Values.elasticsearch.hosts 0 }}",
+          - "{{ .Values.elasticsearch.scheme }}://{{ index .Values.elasticsearch.hosts 0 }}"
           - "-listen"
-          - "{{ .Values.awsSigningSidecar.network.address }}:{{ .Values.awsSigningSidecar.network.port }}",
+          - "{{ .Values.awsSigningSidecar.network.address }}:{{ .Values.awsSigningSidecar.network.port }}"
           - "-timeout"
-          - "{{ .Values.awsSigningSidecar.network.remoteReadTimeoutSeconds }}"]
+          - "{{ .Values.awsSigningSidecar.network.remoteReadTimeoutSeconds }}"
 {{- range $arg := .Values.awsSigningSidecar.args }}
-          - {{ $arg }}
+          - "{{ $arg }}"
 {{- end }}
         env:
         - name: PORT_NUM
