allow password to be referenced by secret
Signed-off-by: Lee Spottiswood <me@lee.io>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -63,6 +63,9 @@ elasticsearch:
     enabled: false
     user: null
     password: null
+    passwordSecretKeyRef: null
+      # name: mysecret
+      # key: password
   includeTagKey: true
   setOutputHostEnvVar: true
   # If setOutputHostEnvVar is false this value is ignored
