--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -57,12 +57,12 @@ spec:
         - name: OUTPUT_USER
           value: {{ .Values.elasticsearch.auth.user | quote }}
 {{- end }}
-{{- if .Values.elasticsearch.auth.passwordSecretKeyRef }}
+{{- if .Values.elasticsearch.auth.existingSecret.name }}
         - name: OUTPUT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ .Values.elasticsearch.auth.passwordSecretKeyRef.name }}
-              key: {{ .Values.elasticsearch.auth.passwordSecretKeyRef.key }}
+              name: {{ .Values.elasticsearch.auth.existingSecret.name }}
+              key: {{ .Values.elasticsearch.auth.existingSecret.key }}
 {{- else if .Values.elasticsearch.auth.password }}
         - name: OUTPUT_PASSWORD
           value: {{ .Values.elasticsearch.auth.password | quote }}
