allow password to be referenced by secret (#62)
* allow password to be referenced by secret

Signed-off-by: Lee Spottiswood <me@lee.io>

* readme and chart version bump

Signed-off-by: Lee Spottiswood <me@lee.io>

* apply suggestions

Signed-off-by: Lee Spottiswood <me@lee.io>

* adjust values

Signed-off-by: Lee Spottiswood <me@lee.io>

Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -57,7 +57,13 @@ spec:
         - name: OUTPUT_USER
           value: {{ .Values.elasticsearch.auth.user | quote }}
 {{- end }}
-{{- if .Values.elasticsearch.auth.password }}
+{{- if .Values.elasticsearch.auth.existingSecret.name }}
+        - name: OUTPUT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.elasticsearch.auth.existingSecret.name }}
+              key: {{ .Values.elasticsearch.auth.existingSecret.key }}
+{{- else if .Values.elasticsearch.auth.password }}
         - name: OUTPUT_PASSWORD
           value: {{ .Values.elasticsearch.auth.password | quote }}
 {{- end }}
