add ssh existing secret & fix gcp exisitng secret
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/charts/mysqldump/templates/secret-ssh-upload.yaml
+++ b/charts/mysqldump/templates/secret-ssh-upload.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.upload.ssh.enabled }}
+{{- if and (.Values.upload.ssh.enabled) (not .Values.upload.ssh.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
