--- a/charts/mysqldump/templates/job.yaml
+++ b/charts/mysqldump/templates/job.yaml
@@ -8,6 +8,11 @@ metadata:
 spec:
   backoffLimit: 1
   template:
+{{- if .Values.podAnnotations }}
+    metadata:
+      annotations:
+{{ toYaml .Values.podAnnotations | indent 8 }}
+{{- end }}
 {{- $file := .Files.Get "files/job.tpl" }}
 {{ tpl $file . | indent 4 }}
 {{ end }}
