Issue 74 - add fluentd output logging format variable
Signed-off-by: Jared Burns <jared.burns@nike.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -10,6 +10,9 @@ data:
   system.conf: |-
     <system>
       root_dir /tmp/fluentd-buffers/
+      <log>
+        format {{ .Values.fluentdLogFormat }}
+      </log>
     </system>
 {{- end }}
 
