--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -108,8 +108,8 @@ spec:
           value: {{ .Values.elasticsearch.typeName | quote }}
         - name: OUTPUT_BUFFER_CHUNK_LIMIT
           value: {{ .Values.elasticsearch.buffer.chunkLimitSize | quote }}
-        - name: OUTPUT_BUFFER_QUEUE_LIMIT
-          value: {{ .Values.elasticsearch.buffer.queueLimitLength | quote }}
+        - name: OUTPUT_BUFFER_TOTAL_LIMIT_SIZE
+          value: {{ .Values.elasticsearch.buffer.totalLimitSize | quote }}
           {{- if .Values.elasticsearch.buffer.chunkKeys }}
         - name: OUTPUT_BUFFER_CHUNK_KEYS
           value: {{ .Values.elasticsearch.buffer.chunkKeys | quote }}
