[fluentd-elasticsearch] Support arbitrary config for kubernetes_metadata
This allows the user to set any configuration they wish for the
`kubernetes_metadata` filter without overriding the entire
`containers.input.conf` configmap. One use case would be to add
specific annotations to the log messages with `annotation_match`.

Signed-off-by: Chris St. Pierre <chris.a.st.pierre@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -130,14 +130,14 @@ data:
           time_format %Y-%m-%dT%H:%M:%S.%NZ
 {{- if .Values.configMaps.useDefaults.containersKeepTimeKey }}
           keep_time_key true
-{{- end }}          
+{{- end }}
         </pattern>
         <pattern>
           format /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
           time_format %Y-%m-%dT%H:%M:%S.%N%:z
 {{- if .Values.configMaps.useDefaults.containersKeepTimeKey }}
           keep_time_key true
-{{- end }}          
+{{- end }}
         </pattern>
       </parse>
     </source>
@@ -169,6 +169,9 @@ data:
     <filter kubernetes.**>
       @id filter_kubernetes_metadata
       @type kubernetes_metadata
+{{- range $key, $value := .Values.configMaps.useDefaults.kubernetesMetadataFilterConfig }}
+      {{ $key }} {{ $value }}
+{{- end }}
     </filter>
 
     # Fixes json fields in Elasticsearch
