--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -5,11 +5,13 @@
 image:
   registry: quay.io
   repository: monotek/gcloud-mysql
-  tag: "master-13"
+  tag: "master-15"
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images#
   pullPolicy: IfNotPresent
+
+sshMountpath: "/home/cloudsdk"
 
 imagePullSecrets: []
 
