--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 env:
   helm-version: "v3.8.2"
   kubeval-version: "v0.16.1"
-  k8s-versions: "['v1.21.10' 'v1.22.7' 'v1.23.5']"
+  k8s-versions: '["v1.21.10" "v1.22.7" "v1.23.5"]'
 
 jobs:
   lint-chart:
