--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Set up Helm
-        uses: azure/setup-helm@v1.1
+        uses: azure/setup-helm@v2.0
         with:
           version: "${{ env.helm-version }}"
       - uses: actions/setup-python@v2
@@ -53,14 +53,17 @@ jobs:
       - lint-chart
     strategy:
       matrix:
-        k8s: ${{ env.k8s-versions }}
+        k8s: '"${{ env.k8s-versions }}"'
+          # - v1.21.10
+          # - v1.22.7
+          # - v1.23.5
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Set up Helm
-        uses: azure/setup-helm@v1.1
+        uses: azure/setup-helm@v2.0
         with:
           version: "${{ env.helm-version }}"
       - name: Run kubeval
@@ -76,7 +79,10 @@ jobs:
       - kubeval-chart
     strategy:
       matrix:
-        k8s: ${{ env.k8s-versions }}
+        k8s: '"${{ env.k8s-versions }}"'
+          # - v1.21.10
+          # - v1.22.7
+          # - v1.23.5
     steps:
       - name: Checkout
         uses: actions/checkout@v3
