--- a/charts/mysqldump/Chart.yaml
+++ b/charts/mysqldump/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-version: 5.0.0
-appVersion: 3.0.0
+version: 5.1.0
+appVersion: v3.0.16
 description: A Helm chart to help backup MySQL databases using mysqldump
 name: mysqldump
 keywords:
@@ -18,6 +18,6 @@ maintainers:
 type: application
 dependencies:
   - name: mariadb
-    version: "9.3.5"
+    version: 11.0.14
     repository: "https://charts.bitnami.com/bitnami"
     condition: mariadb.enabled
