--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -5,7 +5,8 @@
 image:
   registry: quay.io
   repository: monotek/gcloud-mysql
-  tag: "master-15"
+  # uses appVersion form Chart.yaml if not set
+  tag: ""
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images#
