--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -41,7 +41,7 @@ spec:
 {{- end }}
       containers:
       - name: {{ include "fluentd-elasticsearch.fullname" . }}
-        image:  "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image:  "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         - name: FLUENTD_ARGS
