use fixed postgres name
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -236,6 +236,7 @@ postgresql:
     database: vrt
     username: vrt
     password: vrt-db-password
+  fullnameOverride: vrt-postgresql
   resources: {}
     # limits:
     #   cpu: 100m
