--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -4,6 +4,7 @@ fullnameOverride: ""
 imagePullSecrets: []
 
 vrtConfig:
+  appFrontendUrl: "http://localhost:8080"
   bodyParserJsonLimit: "5mb"
   elasticsearch:
     # enable/disable elasticsearch chart dependency
@@ -29,6 +30,7 @@ vrtConfig:
     port: 5432
     # needs to be the same as the postgresql.postgresqlUsername
     user: vrt
+  reactAppApiUrl: "http://localhost:4200"
 
 # Configuration for persistence
 persistence:
@@ -210,7 +212,7 @@ elasticsearch:
   # see: <https://www.elastic.co/guide/en/elasticsearch/reference/current/cluster-health.html#request-params>
   clusterHealthCheckParams: "wait_for_status=yellow&timeout=1s"
   resources: {}
-    # requests:
+    # requests:APP_FRONTEND_URL
     #   cpu: "100m"
     #   memory: "2Gi"
     # limits:
