--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -212,7 +212,7 @@ elasticsearch:
   # see: <https://www.elastic.co/guide/en/elasticsearch/reference/current/cluster-health.html#request-params>
   clusterHealthCheckParams: "wait_for_status=yellow&timeout=1s"
   resources: {}
-    # requests:APP_FRONTEND_URL
+    # requests:
     #   cpu: "100m"
     #   memory: "2Gi"
     # limits:
