--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -134,11 +134,11 @@ migration:
 
   imagePullSecrets: []
 
-  securityContext: {}
+  securityContext:
     # capabilities:
     #   drop:
     #   - ALL
-    # readOnlyRootFilesystem: true
+    readOnlyRootFilesystem: true
     # runAsNonRoot: true
     # runAsUser: 1000
 
