--- a/charts/visual-regression-tracker/templates/secrets.yaml
+++ b/charts/visual-regression-tracker/templates/secrets.yaml
@@ -10,7 +10,7 @@ type: Opaque
 data:
   {{ .Values.secrets.elasticsearch.secretKey }}: {{ .Values.vrtConfig.elasticsearch.pass | b64enc | quote }}
 {{ end }}
-{{ if and .Values.vrtConfig.jwt.pass (not .Values.secrets.jwt.useExisting) }}
+{{ if not .Values.secrets.jwt.useExisting }}
 ---
 apiVersion: v1
 kind: Secret
