[vrt] remove es dependency (#115)
* remove es dependency

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* readonlyroot api

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix jwt

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* use ol value

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix sort

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* adjust resources

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -64,8 +64,10 @@ spec:
                   name: {{ template "visual-regression-tracker.elasticsearchSecretName" . }}
                   key: {{ .Values.secrets.elasticsearch.secretKey }}
             {{- end }}
+            {{- if or .Values.vrtConfig.elasticsearch.host }}
             - name: ELASTIC_URL
               value: "{{ .Values.vrtConfig.elasticsearch.schema }}://{{ if .Values.vrtConfig.elasticsearch.user }}{{ .Values.vrtConfig.elasticsearch.user }}{{ end }}{{- if or .Values.vrtConfig.elasticsearch.pass .Values.secrets.elasticsearch.useExisting }}:$(ELASTICSEARCH_PASSWORD)@{{ end }}{{ .Values.vrtConfig.elasticsearch.host }}:{{ .Values.vrtConfig.elasticsearch.port }}"
+            {{- end }}
             - name: JWT_LIFE_TIME
               value: "{{ .Values.vrtConfig.jwt.lifeTime }}"
             - name: JWT_SECRET
