--- a/charts/visual-regression-tracker/templates/service-ui.yaml
+++ b/charts/visual-regression-tracker/templates/service-ui.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "visual-regression-tracker.fullname" . }}-ui
   labels:
     {{- include "visual-regression-tracker.labels" . | nindent 4 }}
+    component: ui
 spec:
   type: {{ .Values.ui.service.type }}
   ports:
